--- a/app/src/main/res/layout/activity_chambre.xml
+++ b/app/src/main/res/layout/activity_chambre.xml
@@ -23,6 +23,7 @@
             <TableLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <TableRow
@@ -61,6 +62,7 @@
                 android:id="@+id/textHour"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:text="00:00"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
@@ -69,13 +71,15 @@
                 android:id="@+id/btnSchedule"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/schedule"
-                android:onClick="cliqueBtnDate"/>
+                android:layout_weight="1"
+                android:onClick="cliqueBtnDate"
+                app:srcCompat="@drawable/schedule" />
 
             <ImageButton
                 android:id="@+id/btnPurse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:onClick="cliqueBtnShop"
                 app:srcCompat="@drawable/purse" />
 
@@ -83,17 +87,16 @@
                 android:id="@+id/btnSkills"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:onClick="clicqueBtnCompetences"
                 app:srcCompat="@drawable/skills" />
 
             <ImageButton
-                android:id="@+id/btnHamburger"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="false"
-                android:background="@android:color/transparent"
-                android:scaleType="fitEnd"
-                app:srcCompat="@drawable/hamburger" />
+                android:id="@+id/btnSettings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/settings" />
 
         </LinearLayout>
 
@@ -135,7 +138,7 @@
                             app:srcCompat="@drawable/lavabo2" />
 
                         <Space
-                            android:layout_width="25dip"
+                            android:layout_width="20dip"
                             android:layout_height="60dip" />
 
                         <ImageButton
@@ -163,13 +166,12 @@
                             android:layout_width="70dip"
                             android:layout_height="140dip"
                             android:background="@android:color/transparent"
-                            app:srcCompat="@drawable/books"
-                            />
+                            app:srcCompat="@drawable/books" />
 
                         <ImageButton
                             android:id="@+id/btnBed"
                             android:layout_width="wrap_content"
-                            android:layout_height="180dip"
+                            android:layout_height="140dp"
                             android:adjustViewBounds="false"
                             android:background="@android:color/transparent"
                             android:onClick="cliqueBtnDormir"
@@ -182,10 +184,10 @@
                         <ImageButton
                             android:id="@+id/btnFridge"
                             android:layout_width="wrap_content"
-                            android:layout_height="130dip"
+                            android:layout_height="110dp"
                             android:background="@android:color/transparent"
-                            android:onClick="cliqueManger"
-                            app:srcCompat="@drawable/fridge" />
+                            app:srcCompat="@drawable/fridge"
+                            android:onClick="cliqueManger"/>
 
                         <Space
                             android:layout_width="30dip"
@@ -194,7 +196,7 @@
                         <ImageButton
                             android:id="@+id/btnDoor"
                             android:layout_width="wrap_content"
-                            android:layout_height="80dip"
+                            android:layout_height="50dp"
                             android:background="@android:color/transparent"
                             app:srcCompat="@drawable/door"
                             android:onClick="clickBtnCours"/>
@@ -209,16 +211,15 @@
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="100dip"
-                        >
+                        android:layout_height="100dip">
 
                         <ImageButton
                             android:id="@+id/btnComputer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@android:color/transparent"
-                            android:onClick="cliqueRevision"
-                            android:src="@drawable/bureau" />
+                            android:src="@drawable/bureau"
+                            android:onClick="cliqueRevision"/>
 
                         <ImageButton
                             android:id="@+id/btnChair"
@@ -241,6 +242,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/testo"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -255,6 +257,34 @@
                     android:layout_height="30dip"
                     android:layout_gravity="center"
                     android:progress="50" />
+
+                <ImageView
+                    android:id="@+id/imageHumeur0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/humeurBar"
+                    android:layout_alignBottom="@id/humeurBar"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toStartOf="@+id/humeurBar"
+                    android:layout_toLeftOf="@+id/humeurBar"
+                    app:srcCompat="@drawable/angry32" />
+
+                <ImageView
+                    android:id="@+id/imageHumeur100"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/humeurBar"
+                    android:layout_alignBottom="@id/humeurBar"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toEndOf="@+id/humeurBar"
+                    android:layout_toRightOf="@+id/humeurBar"
+                    app:srcCompat="@drawable/happy32" />
 
                 <TextView
                     android:id="@+id/textHumeur"
@@ -290,6 +320,34 @@
                     android:layout_gravity="center"
                     android:progress="50" />
 
+                <ImageView
+                    android:id="@+id/imageEnergie0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/energieBar"
+                    android:layout_alignBottom="@id/energieBar"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toStartOf="@+id/energieBar"
+                    android:layout_toLeftOf="@+id/energieBar"
+                    app:srcCompat="@drawable/asleep32" />
+
+                <ImageView
+                    android:id="@+id/imageEnergie100"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/energieBar"
+                    android:layout_alignBottom="@id/energieBar"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toEndOf="@+id/energieBar"
+                    android:layout_toRightOf="@+id/energieBar"
+                    app:srcCompat="@drawable/flash32" />
+
                 <TextView
                     android:id="@+id/textEnergie"
                     android:layout_width="200dip"
@@ -324,6 +382,34 @@
                     android:layout_gravity="center"
                     android:progress="50" />
 
+                <ImageView
+                    android:id="@+id/imageSatiete0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/satieteBar"
+                    android:layout_alignBottom="@id/satieteBar"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toStartOf="@+id/satieteBar"
+                    android:layout_toLeftOf="@+id/satieteBar"
+                    app:srcCompat="@drawable/apple32" />
+
+                <ImageView
+                    android:id="@+id/imageSatiete100"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/satieteBar"
+                    android:layout_alignBottom="@id/satieteBar"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toEndOf="@+id/satieteBar"
+                    android:layout_toRightOf="@+id/satieteBar"
+                    app:srcCompat="@drawable/applefull32" />
+
                 <TextView
                     android:id="@+id/textSatiete"
                     android:layout_width="200dip"
@@ -357,6 +443,34 @@
                     android:layout_height="22dip"
                     android:layout_gravity="center"
                     android:progress="50" />
+
+                <ImageView
+                    android:id="@+id/imageHygiene0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/hygieneBar"
+                    android:layout_alignBottom="@id/hygieneBar"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toStartOf="@+id/hygieneBar"
+                    android:layout_toLeftOf="@+id/hygieneBar"
+                    app:srcCompat="@drawable/dirty_clothes32" />
+
+                <ImageView
+                    android:id="@+id/imageHygiene100"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@id/hygieneBar"
+                    android:layout_alignBottom="@id/hygieneBar"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toEndOf="@+id/hygieneBar"
+                    android:layout_toRightOf="@+id/hygieneBar"
+                    app:srcCompat="@drawable/bathtub32" />
 
                 <TextView
                     android:id="@+id/textHygiene"
